# MevTpcDataProcess

./: CMakeLists.txt  README.md  cmake-vs2022-debug.bat  dataProcess.vsdx  settings.json  低速光纤传输协议.vsdx
include/: ADC_code_correct.hpp  ADC_code_correct_cali.hpp  ADCcode_correct_cali.hpp  Q_calculate.hpp  amplitude_cali.hpp  data_correct.hpp  gain_cali.hpp  gain_correct.hpp  getXYHitMap.hpp  get_spectrum.hpp  info_calculate.hpp  main.hpp  my_class.hpp  my_const.hpp  my_func.hpp  my_lib.hpp  noise_analysis.hpp  plot.hpp  raw_data_read_1v0.hpp  system.hpp
json/: c_cpp_properties.json
protocol/: asic数据格式.vsdx
src/: ADC_code_correct.cpp  ADC_code_correct_cali.cpp  ADCcode_correct_cali.cpp  Q_calculate.cpp  amplitude_cali.cpp  data_correct.cpp  gain_cali.cpp  gain_correct.cpp  getXYHitMap.cpp  get_spectrum.cpp  info_calculate.cpp  main.cpp  my_func.cpp  noise_analysis.cpp  plot.cpp  raw_data_read_1v0.cpp
